<resources>
    <string name="app_name">ShareApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send_data_to_next_activity">Send data to next activity</string>
    <string name="share_to_other_apps">Share to other Apps</string>
    <string name="show_my_hobbies">Show my hobbies</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="show_toast_is_clicked">ShowToast is clicked !</string>
</resources>
