<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/show_toast" />

    <EditText
        android:id="@+id/etUserMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:ems="10"
        android:hint="@string/enter_a_message"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSendToNextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:text="@string/send_data_to_next_activity" />

    <Button
        android:id="@+id/btnShareToOtherApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSendToNextActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-210dp"
        android:text="@string/share_to_other_apps" />

    <Button
        android:id="@+id/btnShowHobbiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/show_my_hobbies" />

</RelativeLayout>